# vkdrawcube

./: .gitignore  README.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/vkutils/: CMakeLists.txt  util.hpp  util_init.cpp
